# cast-s2s

./: .gitignore  README.md  pyproject.toml
configs/: inference.example.yaml  train.example.yaml
docs/: data_format.md  inference.md  training_notes.md
examples/: prompt.txt
inference/: generate_continuation.py
scripts/: infer.py  train.py
speech_cast/: checkpointing.py  codec.py  config.py  continuation.py  datasets.py  language_model.py
src/cast_s2s/: audio_tokens.py  config.py  data.py  generation.py  model.py
tests/: test_sequence_format.py
training/: train_interleaved.py
