[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cast-s2s"
version = "0.1.0"
description = "Training and inference utilities for interleaved speech-token language models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "accelerate>=0.30",
  "datasets>=2.19",
  "huggingface-hub>=0.23",
  "numpy>=1.24",
  "peft>=0.11",
  "pyyaml>=6.0",
  "scipy>=1.11",
  "torch>=2.2",
  "torchaudio>=2.2",
  "transformers>=4.44"
]

[project.optional-dependencies]
train = ["evaluate>=0.4"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
